hphp/hack/test/typecheck/constraints/class_type_constant2.php.exp
File "class_type_constant2.php", line 6, characters 35-52:
Some type arguments violate their constraints (Typing[4323])
  File "class_type_constant2.php", line 3, characters 22-22:
  `T` is a constrained type parameter
  File "class_type_constant2.php", line 3, characters 27-29:
  This type constraint is violated
  File "class_type_constant2.php", line 3, characters 27-29:
  Expected `num`
  File "class_type_constant2.php", line 6, characters 46-51:
  But got `string`
